Add GetCacheTimes endpoint
