# api/parameters.go
@@ -1,0 +1,7 @@
+package api
+
+const (
+	QueryParamLimit       = "limit"
+	QueryParamOffset      = "offset"
+	QueryParamReleaseTime = "release_time"
+)
